# digitdreamer

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebooks/: autoencoder.ipynb  diffusion.ipynb
src/digitdreamer/: __init__.py  autoencoder.py  dit.py  mnistdm.py
src/digitdreamer/modules/: __init__.py  attention.py  block.py  mlp.py  rf.py  scales.py
